--- a/app/globals.css
+++ b/app/globals.css
@@ -1,33 +1,116 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+*
+{
+  padding: 0px;
+  margin: 0px;
+  box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+body
+{
+  background-color: black;
+  color: white;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.review_container
+{
+  z-index: 100;
+  background: white;
+  color:black;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  min-width: 350px;
+  width: 50vw;
+  margin-top: 20vh;
+  border-radius: 40px;
+  height: 70vh;
+  justify-content: center;
+  overflow:hidden;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.noreview_container
+{
+  display: none;
+}
+
+.review_b
+{
+  display: flex;
+  flex-direction: column;
+  padding-left: 3%;
+  padding-top: 1%;
+}
+
+
+span
+{
+  cursor:default;
+  font-size: 40px;
+}
+
+span:hover
+{
+  color: red;
+}
+
+.heading
+{
+  font-size: 20px;
+}
+
+.tagline
+{
+  font-size: 13px;
+}
+
+.thumimpr
+{
+  display: flex;
+  justify-content: space-around;
+}
+
+.thumimpr>div
+{
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.thumbimpression
+{
+  display: flex;
+  flex-direction: column;
+  gap: 7px;
+  padding: 3%;
+}
+
+.superheading
+{
+  font-size: 35px;
+  font-weight: 600;
+  padding-left: 3%;
+  padding-top: 1%;
+}
+
+.submitreview
+{
+  display: flex;
+  justify-content: center;
+}
+
+.submitreview>button
+{
+  padding: 15px 30px;
+  background: black;
+  color: white;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.crossicon
+{
+  display: flex;
+  justify-content: left;
+  padding-left: 3%;
 }
